--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
     <main>
         <section>
-            
+            <div class="c1 c"></div>
+            <div class="c2 c"></div>
+            <div class="c3 c"></div>
+            <div class="c4 c"></div>
+            <div class="c5 c"></div>
         </section>
     </main>
 </body>
